Fixed scrollbar issue

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -19,6 +19,7 @@ body {
 body {
     background: $white;
     min-height: 100vh;
+    overflow: hidden;
     position: relative;
 }
 
